# Agentic-AI-for-compiler-

HW1/: CMakeLists.txt
HW1/.claude/: settings.local.json
HW1/examples/: 1.rs  2.rs  input.rs
HW1/include/lexer/: lexer.h  token.h
HW1/src/: lexer.cpp  main.cpp
HW1/tests/: CMakeLists.txt  test_lexer.cpp
HW1_bystep/: CMakeLists.txt
HW1_bystep/Parser/: CMakeLists.txt
HW1_bystep/Parser/examples/: parse_full.rs  parse_if.rs  parse_return.rs  parse_while.rs
HW1_bystep/Parser/src/: ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
HW1_bystep/examples/: 3.rs  4.rs  5.rs  input_edgecases.rs  input_fn.rs  input_identifiers.rs  input_keywords.rs  input_numbers.rs  input_operators.rs  input_strings.rs
HW1_bystep/src/: main.cpp
